
      foo : apply lem to *foo bar baz.

  then the hypothesis named foo is effectively *replaced* with a new
  hypothesis named foo that is the result of applying the lem to the old foo
  and the other arguments.
* Optional semi-colon allowed before the first clause in a definition or
  co-definition block.
* Variable renaming can overwrite old variables that have already been
  instantiated.

Internal changes

* The parser has stronger checks to enforce the lexical convention that all
  identifiers matching n[0-9]+ are nominal constants.

Bugfixes

* Abella now builds on versions of OCaml between 3.12.1 and 4.01.0
  (inclusive) again.
* Web-page generating scripts properly handle proof syntax changes since
  version 1.3.5.
* The toplevel now prints tactics using the same syntax as in proof scripts.
* The apply tactic can now apply lemmas that do not have a forall prefix.

New examples

* The process calculus examples have been re-organized. There are now two
  medium sized new developments of the meta-theory of bisimulation-up-to
  techniques for CCS and the pi-calculus.


Changes in 2.0.2 from 2.0.1
---------------------------

Potentially breaking changes.

* Constants with names matching n[0-9]+ are forcibly treated as nominal
  constants. This fixes a unsoundness due to ambiguous parsing of such
  constants in proofs.
* The tactic "exists" now has a synonym: "witness". This adds "witness" to
  the list of keywords.

Additions

* Specification language now supports <= in addition to =>
* Binders are printed using variable naming hints from the source instead of
  in a normalized form (x1, x2, etc.)
* Can unfold the nth clause of an inductive or co-inductive
  definition block using "unfold n".
* Can name clauses in the specification (in .mod files) using a comment of
  the form %:nm: right before a clause. There must be a single Abella
  identifier and no spaces between the two :s.
* Can unfold a specific clause named "nm" of a specification using "unfold